# appa

./: .dockerignore  .env.example  .gitignore  .goreleaser.yml  ARCHITECTURE.md  CNAME  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  compose.yml  go.mod  go.sum  index.html  install.sh
deploy/ansible/: .ansible-lint  README.md  ansible.cfg  pyproject.toml
deploy/ansible/dev/: README.md  Vagrantfile  inventory.ini
deploy/ansible/group_vars/all/: firewall.yml
deploy/ansible/playbooks/: compliance-scan.yml  deploy-stack.yml  security-hardening.yml
deploy/ansible/roles/access_control/defaults/: main.yml
deploy/ansible/roles/access_control/meta/: main.yml
deploy/ansible/roles/access_control/tasks/: main.yml
deploy/ansible/roles/access_control/templates/: login.defs.j2  pwquality.conf.j2  sudoers.j2
deploy/ansible/roles/appa_stack/defaults/: main.yml
deploy/ansible/roles/appa_stack/meta/: main.yml
deploy/ansible/roles/appa_stack/tasks/: main.yml
deploy/ansible/roles/appa_stack/templates/: Caddyfile.j2  compose.yml.j2  entrypoint.sh.j2  env.j2  stack.base.yml.j2  stack.data.yml.j2
deploy/ansible/roles/audit/defaults/: main.yml
deploy/ansible/roles/audit/handlers/: main.yml
deploy/ansible/roles/audit/meta/: main.yml
deploy/ansible/roles/audit/tasks/: main.yml
deploy/ansible/roles/audit/templates/: audit.rules.j2  auditd.conf.j2
deploy/ansible/roles/docker/tasks/: main.yml
deploy/ansible/roles/firewall/defaults/: main.yml
deploy/ansible/roles/ssh_hardening/: README.md
docs/: DEPLOY_STACK.md  (+8 more)
(+127 files in other folders)
